2010-05-16  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Special symbols): Document the key to dislpay
	entities as UTF8 characters.
	(In-buffer settings): Document the new keywords for pretty
	entity display.

2010-05-15  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Tables in LaTeX export): Document the multicolumn
	keyword.

2010-05-10  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (The date/time prompt): Document the new keys `C-v'
	and `M-v'.

2010-05-08  Carsten Dominik  <carsten.dominik@gmail.com>

	* orgcard.tex: Document inline image toggling.

	* org.texi (Handling links): Document inline image toggling.

2010-05-07  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Updating the table): Document new buffer-wide
	table commands.

2010-04-26  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Conflicts): Document new work-around for windmove.el.
	(Plain lists): Describe counter start cookies.
	(External links): Add example for a doi link.

2010-04-23  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Plain lists): Document the commands to promote/demote
	an item without affecting children.

2010-04-22  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Sitemap): Document sitemap sorting.

2010-04-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Repeated tasks): Document that the user can determine
	the target state.

2010-04-07  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (LaTeX and PDF export): Add a footnote about xetex.

2010-04-05  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (LaTeX/PDF export commands): Section renamed and
	moved.

2010-04-04  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (Sectioning structure): Update.
	(References): New use case for field coordinates.

2010-04-01  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (The export dispatcher): Renamed from ASCII export.